--- a/public/projects.html
+++ b/public/projects.html
@@ -72,7 +72,8 @@
       <div class="tab-pane fade show active" id="home-tab-pane" role="tabpanel" aria-labelledby="home-tab" tabindex="0">
         <div class="row">
           <div class="col-md-8">
-            <h5 style="text-align: center; padding-top: 30px; padding-bottom: 15px; color:brown">Ship Management System</h5>
+            <h5 style="text-align: center; padding-top: 30px; padding-bottom: 15px; color:brown">Ship Management System
+            </h5>
             <img style="padding-bottom: 30px;" src="../images/ship_layout_image1.png" class="img-fluid"
               alt="Project Image">
           </div>
@@ -380,7 +381,8 @@
       <!-- project2 starts here -->
       <div class="tab-pane fade" id="profile-tab-pane" role="tabpanel" aria-labelledby="profile-tab" tabindex="0">
         <div class="col-md-8">
-          <h5 style="text-align: center; padding-top: 30px; padding-bottom: 15px; color:brown">Restaurant Online Ordering Website
+          <h5 style="text-align: center; padding-top: 30px; padding-bottom: 15px; color:brown; max-height: 50%;">
+            Restaurant Online Ordering Website
           </h5>
           <img style="padding-bottom: 30px;" src="../project2_images/walk_through/order_page.png" class="img-fluid"
             alt="Project Image">
@@ -565,7 +567,7 @@
         <div class="col-md-8">
           <h5 style="text-align: center; padding-top: 30px; padding-bottom: 15px; color:brown">Solving N-Puzzle Problems
           </h5>
-          <img style="padding-bottom: 15px;" src="../project3_images/8puzzle.png" class="img-fluid"
+          <img style="padding-bottom: 15px; max-height: 60%;" src="../project3_images/8puzzle.png" class="img-fluid"
             alt="Project Image">
         </div>
         <div class="col-md-4">
@@ -578,10 +580,12 @@
               Project Github Link
             </a></p>
         </div>
-        <p style="max-width: 80% "><strong>Although this project and the next machine learning project are not as complex as the previous two, they played a crucial role in my understanding of the primary algorithms of artificial intelligence.</strong></p>
+        <p style="max-width: 80% "><strong>Although this project and the next machine learning project are not as
+            complex as the previous two, they played a crucial role in my understanding of the primary algorithms of
+            artificial intelligence.</strong></p>
         <p style="color:brown">In this project, the programming language I used is 100% Java.</p>
         <img style="max-width: 30%; max-height: 30%; padding-top: 0px; padding-bottom: 30px;"
-                    src="../project3_images/java.png">
+          src="../project3_images/java.png">
         <div class="accordion" id="accordionPanelsStayOpenExample">
           <div class="accordion-item">
             <h2 class="accordion-header">
@@ -605,9 +609,11 @@
                   <img style="max-width: 70%; max-height: 70%; padding-top: 20px; padding-bottom: 20px;"
                     src="../project3_images/3_puzzle.png">
                   <p>After level-6, there is no unvisited nodes in this tree.</p>
-                  <p>However, for 3-puzzle problems, there is no problem using uniform cost search, but for 8-puzzle and higher level searches, a very large spanning tree will be formed and extremely high time complexity will be formed.</p>
+                  <p>However, for 3-puzzle problems, there is no problem using uniform cost search, but for 8-puzzle and
+                    higher level searches, a very large spanning tree will be formed and extremely high time complexity
+                    will be formed.</p>
                   <p>Note that in the search tree, we can acturally <code>trim</code> a branch to get the goal state.
-                     This leads to the introduction of <strong>Heuristic Search</strong>.
+                    This leads to the introduction of <strong>Heuristic Search</strong>.
                   </p>
                 </div>
               </div>
@@ -629,24 +635,29 @@
                 <!-- Put technology stack rationale right here -->
                 <div>
                   <p><strong>Heuristic Search</strong> is a Informed Search.</p>
-                  <p>A Heuristic is a function that, when applied to a state, returns a number that is an estimate of the merit of the state, with respect to the goal.</p>
-                  <p>In other words, the heuristic tells us approximately how far the state is from the <code>goal state</code>.</p>
+                  <p>A Heuristic is a function that, when applied to a state, returns a number that is an estimate of
+                    the merit of the state, with respect to the goal.</p>
+                  <p>In other words, the heuristic tells us approximately how far the state is from the
+                    <code>goal state</code>.
+                  </p>
                   <img style="max-width: 30%; max-height: 50%; padding-top: 20px; padding-bottom: 20px;"
                     src="../project3_images/goal_state.png">
                   <p>In this case, only <strong>'8'</strong> is misplaced, so the heuristic function evaluates to 1.</p>
-                  <p style="color:chocolate">In other words, the heuristic is telling us, that it thinks a solution might be available in just 1 more move.</p>
+                  <p style="color:chocolate">In other words, the heuristic is telling us, that it thinks a solution
+                    might be available in just 1 more move.</p>
                   <img style="max-width: 70%; max-height: 50%; padding-top: 20px; padding-bottom: 20px;"
                     src="../project3_images/manhattan.png">
-                  <p style="color:chocolate">Through Heuristic Search, we can effectively prune the Blind Search Tree.</p>
+                  <p style="color:chocolate">Through Heuristic Search, we can effectively prune the Blind Search Tree.
+                  </p>
                   <img style="max-width: 70%; max-height: 50%; padding-top: 20px; padding-bottom: 20px;"
                     src="../project3_images/jian.png">
                   <ul>
                     <li><strong>My Code of Finding h(n)</strong></li>
                     <img style="max-width: 60%; max-height: 50%; padding-top: 20px; padding-bottom: 20px;"
-                    src="../project3_images/code.png">
+                      src="../project3_images/code.png">
                     <li><strong>A Sample Console Output</strong></li>
                     <img style="max-width: 60%; max-height: 50%; padding-top: 20px; padding-bottom: 20px;"
-                    src="../project3_images/output.png">
+                      src="../project3_images/output.png">
                   </ul>
                 </div>
               </div>
@@ -675,40 +686,46 @@
               Project Github Link
             </a></p>
         </div>
-        <p style="max-width: 80% "><strong>This is my favorite of all my projects. I think it's really cool. It gives me a 
-          <code>Basic Idea</code> that instead of trying to create a very complex program to do X, use a relatively simple program that can learn to do X.</strong></p>
-          <p style="max-width: 80% ">For example, instead of trying to program a car to drive <code>(if light(red) && Not pedestrain || speed(x) <= 12 && ...)</code>, 
-            create a program that watches human drive, and <em>learns</em> how to drive.</p>
-          <p style="color:brown">In this project, the programming language I used is 100% Java.</p>
+        <p style="max-width: 80% "><strong>This is my favorite of all my projects. I think it's really cool. It gives me
+            a
+            <code>Basic Idea</code> that instead of trying to create a very complex program to do X, use a relatively
+            simple program that can learn to do X.</strong></p>
+        <p style="max-width: 80% ">For example, instead of trying to program a car to drive
+          <code>(if light(red) && Not pedestrain || speed(x) <= 12 && ...)</code>,
+          create a program that watches human drive, and <em>learns</em> how to drive.
+        </p>
+        <p style="color:brown">In this project, the programming language I used is 100% Java.</p>
         <img style="max-width: 30%; max-height: 30%; padding-top: 0px; padding-bottom: 30px;"
-                    src="../project3_images/java.png">
+          src="../project3_images/java.png">
+        <p style="max-width: 80% ">This project has three parts: </p>
+        <ul>
+          <li><i>Random Accuracy Feature Selection</i></li>
+          <li><i>Nearest Neighbor Classifier</i></li>
+          <li><i>The Combination of the previous 2 parts</i></li>
+        </ul>
+        <p>The details are as follows:</p>
+
         <div class="accordion" id="accordionPanelsStayOpenExample">
           <div class="accordion-item">
             <h2 class="accordion-header">
               <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                 data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="false"
                 aria-controls="panelsStayOpen-collapseOne">
-                Machine Learning Project Part 1
+                Machine Learning Project Part 1 (Random Accuracy Feature Selection)
               </button>
             </h2>
             <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse">
               <div class="accordion-body">
                 <!-- Put technology stack rationale right here -->
                 <div>
-                  <p style="padding-top: 10px">
-                    The <strong>Uniform Cost Search</strong> is a blind search in N-puzzle problems.
-                  </p>
-                  <img style="max-width: 30%; max-height: 30%; padding-top: 20px; padding-bottom: 20px;"
-                    src="../project3_images/UNIFORM.png">
-                  <p>The <strong>3-puzzle</strong> is small enough that we can show a full search tree.</p>
-                  <p style="color: gray;">Repeated states are shown in gray.</p>
-                  <img style="max-width: 70%; max-height: 70%; padding-top: 20px; padding-bottom: 20px;"
-                    src="../project3_images/3_puzzle.png">
-                  <p>After level-6, there is no unvisited nodes in this tree.</p>
-                  <p>However, for 3-puzzle problems, there is no problem using uniform cost search, but for 8-puzzle and higher level searches, a very large spanning tree will be formed and extremely high time complexity will be formed.</p>
-                  <p>Note that in the search tree, we can acturally <code>trim</code> a branch to get the goal state.
-                     This leads to the introduction of <strong>Heuristic Search</strong>.
-                  </p>
+                  <ul>
+                    <li><strong>The Classification Problems</strong></li>
+                    <p>If we want to write a machine learning code to let the computer distinguish <span
+                        style="color: green;"><strong>Canadian</strong></span> quarters from <span
+                        style="color: blue;"><strong>American</strong></span> quarters.</p>
+                    <img style="max-width: 60%; max-height: 50%; padding-top: 15px; padding-bottom: 30px;"
+                      src="../project4_images/CorA.png">
+                  </ul>
                 </div>
               </div>
             </div>
@@ -721,7 +738,7 @@
               <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                 data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false"
                 aria-controls="panelsStayOpen-collapseTwo">
-                Machine Learning Project Part 2
+                Machine Learning Project Part 2 (Nearest Neighbour Classifier)
               </button>
             </h2>
             <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse">
@@ -729,24 +746,73 @@
                 <!-- Put technology stack rationale right here -->
                 <div>
                   <p><strong>Heuristic Search</strong> is a Informed Search.</p>
-                  <p>A Heuristic is a function that, when applied to a state, returns a number that is an estimate of the merit of the state, with respect to the goal.</p>
-                  <p>In other words, the heuristic tells us approximately how far the state is from the <code>goal state</code>.</p>
+                  <p>A Heuristic is a function that, when applied to a state, returns a number that is an estimate of
+                    the merit of the state, with respect to the goal.</p>
+                  <p>In other words, the heuristic tells us approximately how far the state is from the
+                    <code>goal state</code>.
+                  </p>
                   <img style="max-width: 30%; max-height: 50%; padding-top: 20px; padding-bottom: 20px;"
                     src="../project3_images/goal_state.png">
                   <p>In this case, only <strong>'8'</strong> is misplaced, so the heuristic function evaluates to 1.</p>
-                  <p style="color:chocolate">In other words, the heuristic is telling us, that it thinks a solution might be available in just 1 more move.</p>
+                  <p style="color:chocolate">In other words, the heuristic is telling us, that it thinks a solution
+                    might be available in just 1 more move.</p>
                   <img style="max-width: 70%; max-height: 50%; padding-top: 20px; padding-bottom: 20px;"
                     src="../project3_images/manhattan.png">
-                  <p style="color:chocolate">Through Heuristic Search, we can effectively prune the Blind Search Tree.</p>
+                  <p style="color:chocolate">Through Heuristic Search, we can effectively prune the Blind Search Tree.
+                  </p>
                   <img style="max-width: 70%; max-height: 50%; padding-top: 20px; padding-bottom: 20px;"
                     src="../project3_images/jian.png">
                   <ul>
                     <li><strong>My Code of Finding h(n)</strong></li>
                     <img style="max-width: 60%; max-height: 50%; padding-top: 20px; padding-bottom: 20px;"
-                    src="../project3_images/code.png">
+                      src="../project3_images/code.png">
                     <li><strong>A Sample Console Output</strong></li>
                     <img style="max-width: 60%; max-height: 50%; padding-top: 20px; padding-bottom: 20px;"
-                    src="../project3_images/output.png">
+                      src="../project3_images/output.png">
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="accordion" id="accordionPanelsStayOpenExample">
+          <div class="accordion-item">
+            <h2 class="accordion-header">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false"
+                aria-controls="panelsStayOpen-collapseThree">
+                Machine Learning Project Part 3 (Combining)
+              </button>
+            </h2>
+            <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse">
+              <div class="accordion-body">
+                <!-- Put technology stack rationale right here -->
+                <div>
+                  <p><strong>Heuristic Search</strong> is a Informed Search.</p>
+                  <p>A Heuristic is a function that, when applied to a state, returns a number that is an estimate of
+                    the merit of the state, with respect to the goal.</p>
+                  <p>In other words, the heuristic tells us approximately how far the state is from the
+                    <code>goal state</code>.
+                  </p>
+                  <img style="max-width: 30%; max-height: 50%; padding-top: 20px; padding-bottom: 20px;"
+                    src="../project3_images/goal_state.png">
+                  <p>In this case, only <strong>'8'</strong> is misplaced, so the heuristic function evaluates to 1.</p>
+                  <p style="color:chocolate">In other words, the heuristic is telling us, that it thinks a solution
+                    might be available in just 1 more move.</p>
+                  <img style="max-width: 70%; max-height: 50%; padding-top: 20px; padding-bottom: 20px;"
+                    src="../project3_images/manhattan.png">
+                  <p style="color:chocolate">Through Heuristic Search, we can effectively prune the Blind Search Tree.
+                  </p>
+                  <img style="max-width: 70%; max-height: 50%; padding-top: 20px; padding-bottom: 20px;"
+                    src="../project3_images/jian.png">
+                  <ul>
+                    <li><strong>My Code of Finding h(n)</strong></li>
+                    <img style="max-width: 60%; max-height: 50%; padding-top: 20px; padding-bottom: 20px;"
+                      src="../project3_images/code.png">
+                    <li><strong>A Sample Console Output</strong></li>
+                    <img style="max-width: 60%; max-height: 50%; padding-top: 20px; padding-bottom: 20px;"
+                      src="../project3_images/output.png">
                   </ul>
                 </div>
               </div>
@@ -754,21 +820,22 @@
           </div>
         </div>
       </div>
-      <!-- project4 ends here -->
     </div>
+    <!-- project4 ends here -->
+  </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous">
-      </script>
-    <script src="/docs/5.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-      crossorigin="anonymous"></script>
-
-    <script>
-      function goBack() {
-        window.history.back();
-      }
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous">
     </script>
+  <script src="/docs/5.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+    crossorigin="anonymous"></script>
+
+  <script>
+    function goBack() {
+      window.history.back();
+    }
+  </script>
   </div>
 </body>
 
